[project]
name = "hexdag-plugins"
version = "0.2.0.dev2"
description = "Official plugins for hexDAG framework - Azure, MySQL, ETL, and storage adapters"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "hexDAG Team", email = "developers@omniviser.ai" }]
requires-python = ">=3.12"
keywords = [
    "hexdag",
    "plugins",
    "azure",
    "mysql",
    "etl",
    "storage",
    "adapter",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "hexdag>=0.5.0",
]

[project.optional-dependencies]
# Azure plugins
azure = ["openai>=1.0.0"]
azure-blob = ["azure-storage-blob>=12.13.0", "azure-identity>=1.13.0"]
azure-cosmos = ["azure-cosmos>=4.3.0", "azure-identity>=1.13.0"]
azure-keyvault = ["azure-keyvault-secrets>=4.4.0", "azure-identity>=1.13.0"]
azure-all = [
    "hexdag-plugins[azure]",
    "hexdag-plugins[azure-blob]",
    "hexdag-plugins[azure-cosmos]",
    "hexdag-plugins[azure-keyvault]",
]

# MySQL plugin
mysql = ["pymysql>=1.1.0"]

# ETL plugin
etl = ["pandas>=2.0.0", "aiohttp>=3.8.0"]

# Storage plugins (additional drivers beyond what's in main hexdag)
storage-postgresql = ["sqlalchemy>=2.0.0", "asyncpg>=0.29.0", "pgvector>=0.3.0"]
storage-mysql = ["sqlalchemy>=2.0.0", "aiomysql>=0.2.0"]
storage-chromadb = ["chromadb>=0.4.0"]
storage-all = [
    "hexdag-plugins[storage-postgresql]",
    "hexdag-plugins[storage-mysql]",
    "hexdag-plugins[storage-chromadb]",
]

# All plugins
all = [
    "hexdag-plugins[azure-all]",
    "hexdag-plugins[mysql]",
    "hexdag-plugins[etl]",
    "hexdag-plugins[storage-all]",
]

# Development dependencies
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
"Homepage" = "https://hexdag.ai"
"Repository" = "https://github.com/omniviser/hexdag"
"Documentation" = "https://hexdag.ai/docs/plugins"
"Bug Reports" = "https://github.com/omniviser/hexdag/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["hexdag_plugins"]

[tool.hatch.build.targets.sdist]
include = [
    "hexdag_plugins/",
    "README.md",
    "LICENSE",
]
exclude = [
    "*/tests/",
    "**/test_*.py",
    "**/*.pyc",
    "**/__pycache__/",
]

# For local development with uv
[tool.uv.sources]
hexdag = { path = "..", editable = true }

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
]
ignore = [
    "SIM105",  # contextlib.suppress doesn't work with async
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["azure/tests", "mysql_adapter/tests", "hexdag_etl/tests", "storage/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
