[project]
name = "hexdag-mysql-adapter"
version = "1.0.0"
description = "MySQL database adapter plugin for hexDAG framework"
authors = [
    { name = "HexDAG Team", email = "team@hexdag.ai" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
keywords = ["hexdag", "mysql", "database", "adapter", "plugin"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]

dependencies = [
    "pymysql>=1.1.0",
    # hexdag is the parent project - not a PyPI dependency
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
"Homepage" = "https://github.com/hexdag/hexdag-mysql-adapter"
"Bug Reports" = "https://github.com/hexdag/hexdag-mysql-adapter/issues"
"Source" = "https://github.com/hexdag/hexdag-mysql-adapter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = [
    "mysql_adapter/**/*.py",
    "README.md",
    "LICENSE",
]
exclude = [
    "tests",
    "*.pyc",
    "__pycache__",
]

[tool.hatch.build.targets.wheel]
packages = ["mysql_adapter"]

# Plugin registration for hexDAG
[tool.hexdag.plugin]
name = "mysql"
module = "hexai_plugins.mysql_adapter"
port = "database"
description = "Production-ready MySQL database adapter with JSON support"
requires_env = ["MYSQL_HOST", "MYSQL_USER", "MYSQL_PASSWORD"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "SIM",    # flake8-simplify
    "I",      # isort
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
