[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hexdag-etl"
version = "0.1.0"
description = "ETL infrastructure for hexDAG pipelines"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "hexDAG Team" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
]
keywords = ["etl", "data-pipeline", "hexdag", "plugin"]
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "aiohttp>=3.8.0",
    "hexdag",         # <-- plain dependency name
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true # now harmless but not strictly needed

[tool.hatch.build.targets.wheel]
packages = ["hexdag_etl"]

[tool.hatch.build.targets.sdist]
include = ["/hexdag_etl", "/tests", "/examples", "/README.md"]

[tool.uv.sources]
hexdag = { path = "../.." } # <-- tell uv to take hexdag from repo root

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "UP", # pyupgrade
]
ignore = [
    "E501",   # line too long
    "SIM105", # contextlib.suppress doesn't work with async
    "E402",   # module import not at top of file (test files)
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
