[project]
name = "hexdag-text-processing-plugin"
version = "0.1.0"
description = "Example text processing plugin for HexDAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hexdag",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
]

[project.entry-points."hexai.plugins"]
textproc = "text_processing_plugin"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
